@@ -1,3 +1,7 @@
+2004-03-07  Daniel Macks  <dmacks@netspace.org>
+
+	* Service.pm: expand_percent: allow braces to explicitly delimit keys.
+
 2004-03-06  Daniel Macks  <dmacks@netspace.org>
 
 	* PkgVersion.pm: Move handling of Source(N) and Source(N)Rename
